# website-differ

./: DESIGN.md  differ.py  pyproject.toml  run_diff.sh
websites/bunnyshell.com/20200405071450/: index.html
websites/fintechos.com/20181022091706/: index.html
websites/fintechos.com/20181123202631/: index.html
websites/fintechos.com/20181124220706/: index.html
websites/fintechos.com/20181221081341/: index.html
websites/fintechos.com/20190216172329/: index.html
websites/fintechos.com/20190320040143/: index.html
websites/fintechos.com/20190320094334/: index.html
websites/fintechos.com/20190630230524/: index.html
websites/fintechos.com/20190702113729/: index.html
websites/fintechos.com/20190707005914/: index.html
websites/fintechos.com/20190724202228/: index.html
websites/fintechos.com/20190725205617/: index.html
websites/fintechos.com/20190727014214/: index.html
websites/fintechos.com/20191129071524/: index.html
websites/fintechos.com/20191130110831/: index.html
websites/fintechos.com/20191210110514/: index.html
websites/fintechos.com/20191211051754/: index.html
websites/fintechos.com/20191213154443/: index.html
websites/fintechos.com/20191214001142/: index.html
websites/fintechos.com/20191215221557/: index.html
websites/fintechos.com/20191219040013/: index.html
websites/fintechos.com/20191220020243/: index.html
websites/fintechos.com/20191221111145/: index.html
websites/fintechos.com/20191222101128/: index.html
websites/fintechos.com/20191223101347/: index.html
websites/fintechos.com/20191224042147/: index.html
(+393 files in other folders)
