[project]
name = "website-differ"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.12"]

[dependency-groups]
dev = ["types-beautifulsoup4>=4.12", "pyright>=1.1", "ruff>=0.8"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
